Added default male

--- a/landing_page.html
+++ b/landing_page.html
@@ -12,7 +12,7 @@
             account will help us personalize your experience.
         </p>
         <form action="/submit-name-email">
-            <p>I am a <label for = "Male">male<input id="Male" type="radio" name="gender" required></label>
+            <p>I am a <label for = "Male">male<input id="Male" type="radio" name="gender" required checked></label>
                 <label for = "Female">female<input id="Female" type="radio" name="gender" required></label>
             </p>
             <p>I want a premium subscription : <label for="yes"><input id="yes" type="checkbox" name="response" required></input></p>
