--- a/landing_page.html
+++ b/landing_page.html
@@ -26,10 +26,10 @@
             account will help us personalize your experience.
         </p>
         <form action="/submit-name-email">
-            <p>I am a <label for = "Male">male<input id="Male" type="radio" name="gender" required checked></label>
-                <label for = "Female">female<input id="Female" type="radio" name="gender" required></label>
+            <p>I am a <label for = "Male">male<input id="Male" type="radio" value= "male",name="gender" required checked></label>
+                <label for = "Female">female<input id="Female" type="radio" value="female", name="gender" required></label>
             </p>
-            <p>I want a premium subscription : <label for="yes"><input id="yes" type="checkbox" name="response" required></input></p>
+            <p>I want a premium subscription : <label for="yes"><input id="yes" type="checkbox" value="premium", name="response" required></input></p>
             <p><label for="name">Enter your name : <input id="name", type="text" placeholder="e.g., Sourav Pal" required></label></p>
             <p><label for="email">Enter your email : <input id="email" type="text" placeholder="e.g., name@gmail.com" required></label></p>
             <p><label for="Password">Enter Password : <input id="Password" type="text" placeholder="e.g., password" required></label>
