Added primary css styling file

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Journalapp</title>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Journalit.org</h1>
         <h5>Your own personalized journal</h5>
-        <img src="https://image.shutterstock.com/image-photo/hand-women-writting-on-diary-260nw-521963527.jpg" alt="A diary">
+        <img class="black_border" src="https://image.shutterstock.com/image-photo/hand-women-writting-on-diary-260nw-521963527.jpg" alt="A diary">
         <p>
             Journals are one of the oldest practices known to the human race. Journals allowed our ancestors to commit there experiences and 
             memories to paper so that future generations could learn from them and build upon there triumps and failures. Maintaining journals have also 
