--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Journalapp</title>
         <link href="style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Pacifico&display=swap" rel="stylesheet" type="text/css">
     </head>
     <body id="background">
         <h1 class="fonttype">Journalit.org</h1>
