--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             account will help us personalize your experience.
         </p>
         <form class="fonttype" action="/submit-name-email">
-            <p>I am a <label for = "Male">male<input id="Male" type="radio" value= "male",name="gender" required checked></label>
+            <p>I am a <label for = "Male">male<input id="Male" type="radio" value= "male" name="gender" required checked></label>
                 <label for = "Female">female<input id="Female" type="radio" value="female", name="gender" required></label>
             </p>
             <p>I want a premium subscription : <label for="yes"><input id="yes" type="checkbox" value="premium", name="response" required></input></p>
